# CPP_Booklet

./: .gitignore  .travis.yml  CMakeLists.txt  ReadMe.md  alignment.cc  class_inheritance_keywords.cc  class_keywords.cc  constexpr.cc  constexpr_if.cc  constexpr_lambda.cc  decltype.cc  enums.cc  executable_list.cmake  fix_numbers.py  generate_cmakelists.sh  generate_html.cmake.in  generate_html.sh  guaranteed_copy_elision.cc  has_include.cc  hex_float_literals.cc  highlight_files.py  lambdas.cc  move_semantics.cc  nested_namespace_definitions.cc  noexcept.cc  nullptr.cc  passing_this_to_lamdas.cc  range_based_for_loops.cc  return_type_deduction.cc  selection_statements_with_initializers.cc  separate_into_examples.py  standard_attributes.cc  static_assert.cc  structured_bindings.cc  trailing_return_types.cc  type_inference_and_auto.cc  unified_initialisation.cc  variadic_templates.cc
html/: 2_10_range_based_for_loops.cc.html  2_11_nested_namespace_definitions.cc.html  2_12_trailing_return_types.cc.html  2_13_lambdas.cc.html  2_13_this_as_lambda_capture.cc.html  2_14_1_constexpr_lambda.cc.html  2_14_constexpr.cc.html  2_14_constexpr_if.cc.html  2_15_alignment.cc.html  2_16_move_semantics.cc.html  2_17_variadic_templates.cc.html  2_18_decltype.cc.html  2_18_return_type_deduction.cc.html  2_19_structured_bindings.cc.html  2_1_unified_initialisation.cc.html  2_20_selection_statements_with_initializers.cc.html  2_21_standard_attributes.cc.html  2_22_hex_float_literals.cc.html  2_24_has_include.cc.html  2_25_guaranteed_copy_elision.cc.html  2_26_variable_templates.cc.html  2_2_decltype.cc.html  2_2_type_inference_and_auto.cc.html  2_3_enums.cc.html  2_4_class_inheritance_keywords.cc.html  2_4_class_keywords.cc.html  2_6_noexcept.cc.html  2_7_static_asserts.cc.html  2_8_nullptr.cc.html  2_9_right_angle_brackets.cc.html  alignment.cc.html  class_inheritance_keywords.cc.html  class_keywords.cc.html  constexpr.cc.html  constexpr_if.cc.html  constexpr_lambda.cc.html  decltype.cc.html  enums.cc.html  guaranteed_copy_elision.cc.html  has_include.cc.html  (+17 more)
manuscript/: booklet.rst  chapter1.txt  chapter2.txt  chapter3.txt  chapter4.txt  pandoc-commands.md  style.css
source/: 2_10_range_based_for_loops.cc  2_10_three_way_comparison.cc  2_11_nested_namespace_definitions.cc  2_12_trailing_return_types.cc  2_13_lambdas.cc  2_13_this_as_lambda_capture.cc  2_14_1_constexpr_lambda.cc  2_14_constexpr.cc  2_14_constexpr_if.cc  2_14_ranges.cc  2_15_alignment.cc  2_15_nested_namespace_definitions.cc  2_16_move_semantics.cc  2_16_trailing_return_types.cc  2_17_this_as_lambda_capture.cc  2_17_variadic_templates.cc  2_18_1_constexpr_lambda.cc  2_18_constexpr_if.cc  2_18_decltype.cc  2_18_return_type_deduction.cc  2_19_alignment.cc  2_19_structured_bindings.cc  2_1_math_includes.cc  2_1_unified_initialisation.cc  2_20_selection_statements_with_initializers.cc  2_20_stdspan.cc  2_21_standard_attributes.cc  2_22_coroutine_await.cc  2_22_coroutine_return.cc  2_22_coroutine_yield.cc  2_22_hex_float_literals.cc  2_23_variadic_templates.cc  2_24_concepts.cc  2_24_has_include.cc  2_25_guaranteed_copy_elision.cc  2_25_return_type_deduction.cc  2_26_structured_bindings.cc  2_26_variable_templates.cc  2_27_selection_statements_with_initializers.cc  2_29_hex_float_literals.cc  (+47 more)
src/: 2_10_range_based_for_loops.cc  2_10_right_angle_brackets.cc  2_10_three_way_comparison.cc  2_11_nested_namespace_definitions.cc  2_11_nullptr.cc  2_11_range_based_for_loops.cc  2_12_nested_namespace_definitions.cc  2_12_right_angle_brackets.cc  2_13_lambdas.cc  2_13_range_based_for_loops.cc  2_13_this_as_lambda_capture.cc  2_13_trailing_return_types.cc  2_14_1_constexpr_lambda.cc  2_14_constexpr.cc  2_14_constexpr_if.cc  2_14_ranges.cc  2_15_1_constexpr_lambda.cc  2_15_2_constexpr_constinit.cc  2_15_alignment.cc  2_15_constexpr_if.cc  2_15_nested_namespace_definitions.cc  2_16_alignment.cc  2_16_move_semantics.cc  2_16_trailing_return_types.cc  2_17_lambdas.cc  2_17_move_semantics.cc  2_17_this_as_lambda_capture.cc  2_17_variadic_templates.cc  2_18_constexpr.cc  2_18_constexpr_if.cc  2_18_coroutine_await.cc  2_18_coroutine_yield.cc  2_18_return_type_deduction.cc  2_19_alignment.cc  2_19_structured_bindings.cc  2_19_variadic_templates.cc  2_1_math_includes.cc  2_20_concepts.cc  2_20_move_semantics.cc  2_20_selection_statements_with_initializers.cc  (+51 more)
text/: booklet.rst  pandoc-commands.md
